tests/baselines/reference/jsFileCompilationPropertySyntaxOfClass.errors.txt
tests/cases/compiler/a.js(1,11): error TS8014: 'property declarations' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    class C { v }
              ~
!!! error TS8014: 'property declarations' can only be used in a .ts file.